post DEX, data from old system